# sma_dev_tools

./: README.md  install.sh  pyproject.toml
scripts/: build.sh  install.sh
src/sma/: config.py  main.py  utils.py
src/sma/modules/common/: list_robots.py  register.py
src/sma/modules/ros2/: deploy.py  ros2_cmd.py
