[project]
name = "sma-dev-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fabric>=3.2.2",
    "rich>=14.2.0",
    "shellingham>=1.5.4",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
