[project]
name = "sma-dev-tools"
version = "0.1.0"
description = "SMA Dev Tools is a Python package designed to make life easier for robotics developers."
authors = [
  {name = "Sergi de las Muelas", email = "sergimuac@gmail.com"},
] 
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fabric>=3.2.2",
    "rich>=14.2.0",
    "shellingham>=1.5.4",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
